bookmark work on downloading thumbnails.

--- a/ipython/system/Download Thumbnails.ipynb
+++ b/ipython/system/Download Thumbnails.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
+      "  warnings.warn(\"failed to import module %s\" % name)\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
     "import CameraNetwork\n",
     "import CameraNetwork.global_settings as gs\n",
+    "import cPickle\n",
     "import cv2\n",
     "import datetime\n",
     "import Image\n",
@@ -30,21 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['109', '109L', '110', '110L', '111', '111L', '113', '113L', '114', '114L', '115', '116', '117', '118', '119', '120']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = CameraNetwork.CLIclient()\n",
     "proxy_params = CameraNetwork.retrieve_proxy_parameters()\n",
@@ -55,57 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(SERVERS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4/|/2017_02_26:  10%|| 4/40 [00:29<04:21,  7.25s/it]                                                                                "
-     ]
-    },
-    {
-     "ename": "TimeoutError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTimeoutError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-3d111bc7f033>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mtnb2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_description\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mtnb2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrefresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mtmp_dfs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mserver_id\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mserver\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquery_day\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"%Y_%m_%d\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mdfs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_dfs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.pyc\u001b[0m in \u001b[0;36mquery\u001b[1;34m(self, server_id, query_day, force)\u001b[0m\n\u001b[0;32m    447\u001b[0m             kwds=dict(\n\u001b[0;32m    448\u001b[0m                 \u001b[0mquery_date\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mquery_day\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 449\u001b[1;33m                 \u001b[0mforce\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mforce\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    450\u001b[0m             )\n\u001b[0;32m    451\u001b[0m         )\n",
-      "\u001b[1;32mc:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.pyc\u001b[0m in \u001b[0;36msend_message\u001b[1;34m(self, servers_id, cmd, args, kwds, timeout)\u001b[0m\n\u001b[0;32m    335\u001b[0m         \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    336\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mfuture\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfuture_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 337\u001b[1;33m             \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfuture\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    338\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m         \u001b[0mstatuses\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs_answers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds_answers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\User\\Anaconda2\\lib\\site-packages\\concurrent\\futures\\_base.pyc\u001b[0m in \u001b[0;36mresult\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    403\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__get_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    404\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 405\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mTimeoutError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    406\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    407\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mexception_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTimeoutError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs = {}\n",
     "tnb1 = tqdm_notebook(c.client_instance.servers, leave=False)\n",
@@ -121,8 +79,31 @@
     "            tnb2.refresh()\n",
     "            tmp_dfs.append(c.query(server_id=server, query_day=datetime.datetime.strptime(day, \"%Y_%m_%d\").date())[0])\n",
     "        except:\n",
-    "            tqdm.write(\"Failed loading day {} of server {}\".format(day, server))\n",
+    "            tqdm.tqdm.write(\"Failed loading day {} of server {}\".format(day, server))\n",
     "    dfs[server] = pd.concat(tmp_dfs, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfs.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"thumbnails.pkl\", \"wb\") as f:\n",
+    "    cPickle.dump(dfs, f)"
    ]
   },
   {
@@ -138,7 +119,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -152,91 +133,70 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "widgets": {
    "state": {
-    "07ec6b0f39754f71afb4e6c0d810cf3a": {
+    "08cdcbbe829147268e3e6eca19a04f60": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "0ab0141cc2b449bd80f4299517e288e2": {
+    "26692450e76d4204bd5f802d5282dbc4": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "0f5cecc9904f43d698963ad46fffca25": {
+    "2f6cc92bca36488fabc48dbef64edc55": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "39d7ff1c80904d3194ea6c9ef0466a9c": {
+    "35a90c38e21943308a0434176da31932": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "49161350c1ab48d1bcf8ea68b1bf8056": {
+    "5b470762c50d488d8aa6a34506f5f03d": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "500e55571599434d9d2faac8cc7efc46": {
+    "8d47c220d84449e49d3e55763a6bc61c": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "c539a5f080404cb2a0510ad51180c144": {
+    "bd091390be984e2f98f6f7c804ddcc21": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "c772f0478cb041df86833ee938d312b2": {
+    "cd765ebe6a19413a9edf135509aec3f1": {
      "views": [
       {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     },
-    "efafede331ac43329307721c1159fe73": {
+    "d5ca1aaa736b4733be85d4c74a1aa40d": {
      "views": [
       {
-       "cell_index": 3
-      }
-     ]
-    },
-    "f30864d349ed4970b40bc850ed2a42fe": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "f4526b52810945da85973da0c85695c0": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    },
-    "fd1b8ec11df14df8a3cc1da6ae9d4e90": {
-     "views": [
-      {
-       "cell_index": 3
+       "cell_index": 2
       }
      ]
     }
