bookmark work on thumbnail download

--- a/ipython/system/Download Thumbnails.ipynb
+++ b/ipython/system/Download Thumbnails.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
+      "  warnings.warn(\"failed to import module %s\" % name)\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -41,10 +50,34 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Failed retrieving proxy parameters:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\internet.py\", line 56, in retrieve_proxy_parameters\n",
+      "    response = urllib2.urlopen(req)\n",
+      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 154, in urlopen\n",
+      "    return opener.open(url, data, timeout)\n",
+      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 435, in open\n",
+      "    response = meth(req, response)\n",
+      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 548, in http_response\n",
+      "    'http', request, response, code, msg, hdrs)\n",
+      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 473, in error\n",
+      "    return self._call_chain(*args)\n",
+      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 407, in _call_chain\n",
+      "    result = func(*args)\n",
+      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 556, in http_error_default\n",
+      "    raise HTTPError(req.get_full_url(), code, msg, hdrs, fp)\n",
+      "HTTPError: HTTP Error 404: Not Found\n",
+      "\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '109L', '110', '110L', '111', '111L', '113', '113L', '114', '114L', '115', '116', '117', '118', '119', '120']\n"
+      "['109', '109L', '110', '110L', '111', '111L', '112L', '113', '113L', '114L', '115', '115L', '116', '116L', '117', '118', '120']\n"
      ]
     }
    ],
@@ -58,13 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "dfs = {}\n",
     "tnb1 = tqdm_notebook(c.client_instance.servers, leave=False)\n",
@@ -86,20 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dfs.keys()"
+    "del dfs[\"115\"][\"longitue\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -138,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -235,7 +272,7 @@
        "2017-01-25 12:28:00 0    35.024963  32.775776     229.0  4102820380  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -262,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -277,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -309,14 +346,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2017-01-25 12:00:00</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
-       "      <td>35.024963</td>\n",
-       "      <td>32.775776</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>4102820380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2017-01-25 12:30:00</th>\n",
        "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
        "      <td>35.024963</td>\n",
@@ -326,7 +355,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-01-25 13:00:00</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148535...</td>\n",
+       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
        "      <td>35.024963</td>\n",
        "      <td>32.775776</td>\n",
        "      <td>229.0</td>\n",
@@ -348,6 +377,14 @@
        "      <td>229.0</td>\n",
        "      <td>4102820380</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-25 14:30:00</th>\n",
+       "      <td>/home/odroid/captured_images/2017_01_25/148535...</td>\n",
+       "      <td>35.024963</td>\n",
+       "      <td>32.775776</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>4102820380</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -355,22 +392,22 @@
       "text/plain": [
        "                                                                  path  \\\n",
        "Time                                                                     \n",
-       "2017-01-25 12:00:00  /home/odroid/captured_images/2017_01_25/148534...   \n",
        "2017-01-25 12:30:00  /home/odroid/captured_images/2017_01_25/148534...   \n",
-       "2017-01-25 13:00:00  /home/odroid/captured_images/2017_01_25/148535...   \n",
+       "2017-01-25 13:00:00  /home/odroid/captured_images/2017_01_25/148534...   \n",
        "2017-01-25 13:30:00  /home/odroid/captured_images/2017_01_25/148535...   \n",
        "2017-01-25 14:00:00  /home/odroid/captured_images/2017_01_25/148535...   \n",
+       "2017-01-25 14:30:00  /home/odroid/captured_images/2017_01_25/148535...   \n",
        "\n",
        "                     longitude   latitude  altitude  serial_num  \n",
        "Time                                                             \n",
-       "2017-01-25 12:00:00  35.024963  32.775776     229.0  4102820380  \n",
        "2017-01-25 12:30:00  35.024963  32.775776     229.0  4102820380  \n",
        "2017-01-25 13:00:00  35.024963  32.775776     229.0  4102820380  \n",
        "2017-01-25 13:30:00  35.024963  32.775776     229.0  4102820380  \n",
-       "2017-01-25 14:00:00  35.024963  32.775776     229.0  4102820380  "
+       "2017-01-25 14:00:00  35.024963  32.775776     229.0  4102820380  \n",
+       "2017-01-25 14:30:00  35.024963  32.775776     229.0  4102820380  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,10 +460,15 @@
     "    tn_paths = []\n",
     "    for ind, row in tqdm_notebook(df_thumbs.iterrows(), total=df_thumbs.shape[0], leave=False):\n",
     "        try:\n",
-    "            array_path = df_thumbs[\"path\"].values[0]\n",
-    "            timestamp = float(os.path.split(array_path)[1].split(\"_\")[0])\n",
-    "            time_ind = datetime.datetime.fromtimestamp(timestamp)\n",
-    "            \n",
+    "            array_path = row[\"path\"]\n",
+    "            array_path = os.path.splitext(array_path)[0]\n",
+    "\n",
+    "            #\n",
+    "            # Parse the time and exposure\n",
+    "            #\n",
+    "            tmp_parts = os.path.split(array_path)[-1].split('_')\n",
+    "            time_ind = datetime.datetime(*[int(i) for i in tmp_parts[1:-1]])\n",
+    "\n",
     "            img = c.seek(server, time_ind, \"2\", JPEG_QUALITY, 201)[0][0]\n",
     "            img = Image.fromarray(img)\n",
     "            tn_path = os.path.join(base_path, \"{}.jpg\".format(ind.strftime(\"%Y_%m_%d_%H_%M_%S\")))\n",
@@ -439,8 +481,7 @@
     "\n",
     "    df_thumbs[\"thumbnail\"] = tn_paths\n",
     "    \n",
-    "    tn_dfs[server] = df_thumbs\n",
-    "    break"
+    "    tn_dfs[server] = df_thumbs"
    ]
   },
   {
@@ -452,13 +493,25 @@
     "editable": true
    },
    "outputs": [],
+   "source": [
+    "with open(\"thumbnails_downloaded.pkl\", \"wb\") as f:\n",
+    "    cPickle.dump(tn_dfs, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -472,70 +525,217 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "widgets": {
    "state": {
-    "08cdcbbe829147268e3e6eca19a04f60": {
+    "11ce04de4a2f4e75980abf8927bcd1c0": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "26692450e76d4204bd5f802d5282dbc4": {
+    "1d8deea96d2f412a97b38fe11b6157a5": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "2f6cc92bca36488fabc48dbef64edc55": {
+    "24ac81948b474270bdcd9eb32cc287f8": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "2754dc2ade8d492aae75a69d69d04282": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "37693ce438cf42b2a73f0aadc3cb3059": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "40e4ae06d4a444d1911e29a8130cba48": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "35a90c38e21943308a0434176da31932": {
+    "549b99e355b64dbf8d74399e7bacb39b": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "5b470762c50d488d8aa6a34506f5f03d": {
+    "560bc3d7145440df9764d9ec0204066b": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "8d47c220d84449e49d3e55763a6bc61c": {
+    "5c270394a02b47f8b335843d922f3280": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "68bcd066236a4a019d303b8c6496fe66": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "bd091390be984e2f98f6f7c804ddcc21": {
+    "75b9ad87827442cead77c6f9b45a9da5": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "cd765ebe6a19413a9edf135509aec3f1": {
+    "771ea4b1270d4b268f8fc9e258a08e62": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "7871ede0d7cb45cca3bd2ce5ff699166": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "d5ca1aaa736b4733be85d4c74a1aa40d": {
+    "7d5f6112edd54134a940802df9dc8aed": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "99aab4bb2a274f489a239950e92c982f": {
      "views": [
       {
        "cell_index": 2
+      }
+     ]
+    },
+    "9d00a049c1744ea2ac454a56e8989601": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "a0851db7dff547d3b6c590c89f88c4d2": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "a76dd27e11e74586a90fda12e41d9c09": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "ac6f7c5a618e423e9091adfc80098ed2": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "b3af7bfadff842dd9aebe9e325b01d2f": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "b8a78839ab0e461e8a15291f3b96dbc8": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "bb9f63f85c854cce8b159aa0c54e0924": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "c4f5e62e78684348b4a738dfe61289ab": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "cb2eed2e83c24878b540c2db0fe51fec": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "cfe214964fd7476b830f036996fd9c65": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "d596d18ee8184e4fba5c81c84888750e": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "db58028f33f64d3192c2212122e78372": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "e22d775cd9354abab1a8ac50f97c2488": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "f2e0e963efd94fcaa9ca67bbe4c80e71": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "fb549e1d84c94b1db8fb2da420446cf4": {
+     "views": [
+      {
+       "cell_index": 12
       }
      ]
     }
