--- a/ipython/system/Download Thumbnails.ipynb
+++ b/ipython/system/Download Thumbnails.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '109L', '110', '110L', '111', '111L', '112L', '113', '113L', '114L', '115', '115L', '116', '116L', '117', '118', '120']\n"
+      "['109', '109L', '110', '110L', '111', '111L', '112L', '113', '113L', '114', '114L', '115', '115L', '116', '116L', '117', '118', '120']\n"
      ]
     }
    ],
@@ -101,7 +101,9 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "2/|/2017_01_20:   5%|| 2/39 [00:14<04:23,  7.12s/it]Failed loading day 2017_01_20 of server 113L\n"
+     ]
     }
    ],
    "source": [
@@ -117,7 +119,13 @@
     "        try:\n",
     "            tnb2.set_description(day)\n",
     "            tnb2.refresh()\n",
-    "            tmp_dfs.append(c.query(server_id=server, query_day=datetime.datetime.strptime(day, \"%Y_%m_%d\").date())[0])\n",
+    "            tmp_dfs.append(\n",
+    "                c.query(\n",
+    "                    server_id=server,\n",
+    "                    query_day=datetime.datetime.strptime(day, \"%Y_%m_%d\").date(),\n",
+    "                    force=True\n",
+    "                )[0]\n",
+    "            )\n",
     "        except:\n",
     "            tqdm.tqdm.write(\"Failed loading day {} of server {}\".format(day, server))\n",
     "    dfs[server] = pd.concat(tmp_dfs, axis=0)"
@@ -125,18 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "del dfs[\"115\"][\"longitue\"]"
+    "#del dfs[\"115\"][\"longitue\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -272,7 +281,7 @@
        "2017-01-25 12:28:00 0    35.024963  32.775776     229.0  4102820380  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -299,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -407,7 +416,7 @@
        "2017-01-25 14:30:00  35.024963  32.775776     229.0  4102820380  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,19 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true,
-    "scrolled": false
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing server: 109\n"
+      "\n"
      ]
     }
    ],
@@ -448,45 +456,45 @@
     "JPEG_QUALITY = 95\n",
     "tn_dfs = {}\n",
     "servers_list = sorted(dfs.keys())\n",
-    "for server in tqdm_notebook(servers_list):\n",
-    "    tqdm.tqdm.write(\"Processing server: {}\".format(server))\n",
-    "    df = dfs[server]\n",
-    "    df_thumbs = df.loc[idx[:, \"2\"], idx[:]].resample(\"30T\", level=0, label='right').apply(custom_resampler).dropna()\n",
-    "    \n",
-    "    base_path = os.path.join(\"thumbnails\", server)\n",
-    "    if not os.path.exists(base_path):\n",
-    "        os.makedirs(base_path)\n",
+    "with open(\"thumbs.log\", \"wb\") as f:\n",
+    "    for server in tqdm_notebook(servers_list):\n",
+    "        #tqdm.tqdm.write(\"Processing server: {}\".format(server))\n",
+    "        df = dfs[server]\n",
+    "        df_thumbs = df.loc[idx[:, \"2\"], idx[:]].resample(\"30T\", level=0, label='right').apply(custom_resampler).dropna()\n",
     "\n",
-    "    tn_paths = []\n",
-    "    for ind, row in tqdm_notebook(df_thumbs.iterrows(), total=df_thumbs.shape[0], leave=False):\n",
-    "        try:\n",
-    "            array_path = row[\"path\"]\n",
-    "            array_path = os.path.splitext(array_path)[0]\n",
+    "        base_path = os.path.join(\"thumbnails\", server)\n",
+    "        if not os.path.exists(base_path):\n",
+    "            os.makedirs(base_path)\n",
     "\n",
-    "            #\n",
-    "            # Parse the time and exposure\n",
-    "            #\n",
-    "            tmp_parts = os.path.split(array_path)[-1].split('_')\n",
-    "            time_ind = datetime.datetime(*[int(i) for i in tmp_parts[1:-1]])\n",
+    "        tn_paths = []\n",
+    "        for ind, row in tqdm_notebook(df_thumbs.iterrows(), total=df_thumbs.shape[0], leave=False):\n",
+    "            try:\n",
+    "                array_path = row[\"path\"]\n",
+    "                array_path = os.path.splitext(array_path)[0]\n",
     "\n",
-    "            img = c.seek(server, time_ind, \"2\", JPEG_QUALITY, 201)[0][0]\n",
-    "            img = Image.fromarray(img)\n",
-    "            tn_path = os.path.join(base_path, \"{}.jpg\".format(ind.strftime(\"%Y_%m_%d_%H_%M_%S\")))\n",
-    "            img.save(tn_path)\n",
-    "            tn_paths.append(tn_path)\n",
-    "        except Exception, e:\n",
-    "            traceback.print_exc()\n",
-    "            tn_paths.append(None)\n",
-    "            raise\n",
+    "                #\n",
+    "                # Parse the time and exposure\n",
+    "                #\n",
+    "                tmp_parts = os.path.split(array_path)[-1].split('_')\n",
+    "                time_ind = datetime.datetime(*[int(i) for i in tmp_parts[1:-1]])\n",
     "\n",
-    "    df_thumbs[\"thumbnail\"] = tn_paths\n",
-    "    \n",
-    "    tn_dfs[server] = df_thumbs"
+    "                img = c.seek(server, time_ind, \"2\", JPEG_QUALITY, 201)[0][0]\n",
+    "                img = Image.fromarray(img)\n",
+    "                tn_path = os.path.join(base_path, \"{}.jpg\".format(ind.strftime(\"%Y_%m_%d_%H_%M_%S\")))\n",
+    "                img.save(tn_path)\n",
+    "                tn_paths.append(tn_path)\n",
+    "            except Exception, e:\n",
+    "                traceback.print_exc(file=f)\n",
+    "                tn_paths.append(None)\n",
+    "\n",
+    "        df_thumbs[\"thumbnail\"] = tn_paths\n",
+    "\n",
+    "        tn_dfs[server] = df_thumbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -529,14 +537,63 @@
   },
   "widgets": {
    "state": {
-    "11ce04de4a2f4e75980abf8927bcd1c0": {
+    "03e9cd8ed51046e3896a150af411620a": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "1d8deea96d2f412a97b38fe11b6157a5": {
+    "06f4dce236f641cfb74bd2e30443f035": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "083476f2ff2e44968b6c05a29a9dcb4e": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "093e0e9073dc48cdbcb9c57e32d5ebd7": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "0f94c9411c8e4f02b2bdd9f05050eb87": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "1672fdbfeb174963b9c845cbe56f36be": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "19cf54678e4d48c6849da65faebc706f": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "19fc976939d94e0b8731c110f90cee40": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "1e93d6e2ef344fbe923c9f6fe1168267": {
      "views": [
       {
        "cell_index": 2
@@ -550,6 +607,20 @@
       }
      ]
     },
+    "25d205c21b764f2fb7f4a6fdf90ffdb1": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "2608344a045e452aa14e11e2b631a1dd": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
     "2754dc2ade8d492aae75a69d69d04282": {
      "views": [
       {
@@ -557,7 +628,49 @@
       }
      ]
     },
+    "28d7729d963d4f69bf1079fb6da08e28": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "30d325831b3b4a508372aaa72e4e8d86": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "335460ad3c394865bd27137fc399cf90": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "35f43af500f44f3189759ed04a16110d": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
     "37693ce438cf42b2a73f0aadc3cb3059": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "38059c09b3dc44bb8bb56d3bd379efa3": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "3e6c1752228243dca5ea9cf729992c98": {
      "views": [
       {
        "cell_index": 12
@@ -571,14 +684,42 @@
       }
      ]
     },
-    "549b99e355b64dbf8d74399e7bacb39b": {
+    "439c266713c24a69b738d832c79e563e": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "560bc3d7145440df9764d9ec0204066b": {
+    "4558cb24682346088cfc1cbb0463f66f": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "4acfb04bce994bf986b7c7cb96cd9aa7": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "5743e6ea911a459a9686c56329f813e0": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "588b3783af7f4acd85cf9a2ab60e1aad": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "5b1a9efd9e12415f8286230296134901": {
      "views": [
       {
        "cell_index": 2
@@ -592,14 +733,49 @@
       }
      ]
     },
-    "68bcd066236a4a019d303b8c6496fe66": {
+    "5e0b87207e7d4d758c95c545bcbcf21d": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "6430ca3ef05a4213802c9701ce40219b": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "75b9ad87827442cead77c6f9b45a9da5": {
+    "696ab0c365c84184a2543b0b478e23c7": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "6d7a458e7ae04a49a55273dafaa18abf": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "6e7275a9e3154ac68477433032d3ecba": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "6ef4857604a747909c641df3bd5a722d": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "72dc3bdb96694820bca3cd7a230761bb": {
      "views": [
       {
        "cell_index": 2
@@ -613,14 +789,63 @@
       }
      ]
     },
-    "7871ede0d7cb45cca3bd2ce5ff699166": {
+    "7d5f6112edd54134a940802df9dc8aed": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "7d7c8175cb1a4c5b831ed9e4ad37fea8": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "822a62667d5c48769d981e4590dee370": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
-    "7d5f6112edd54134a940802df9dc8aed": {
+    "86d53c13448e481fa0bb0f64c4218cb4": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "8795f1b6e23a422d8937a866f1fffd33": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "88dec187308343918f8e5416faf68caf": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "8b2685aa294645138d6eab0d5b9f4649": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "94fdd17b16234c50adf4510ab93d87b5": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "95862ee353b04d4fbff1fd2be4b7442c": {
      "views": [
       {
        "cell_index": 12
@@ -634,6 +859,20 @@
       }
      ]
     },
+    "9c1b1ac98d4844e7a14fac8c7ad18cbb": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "9c5bea5506da42ab9ec7078a6333dff8": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
     "9d00a049c1744ea2ac454a56e8989601": {
      "views": [
       {
@@ -641,21 +880,35 @@
       }
      ]
     },
-    "a0851db7dff547d3b6c590c89f88c4d2": {
+    "a4c9fa28e9824f819fc03dcfad662b26": {
      "views": [
       {
-       "cell_index": 2
+       "cell_index": 12
       }
      ]
     },
-    "a76dd27e11e74586a90fda12e41d9c09": {
+    "a7ad883bf89644d0a1063feafebf2041": {
      "views": [
       {
-       "cell_index": 2
+       "cell_index": 12
       }
      ]
     },
     "ac6f7c5a618e423e9091adfc80098ed2": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "b12c017e4f0a42c5801b03aea0d6697e": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "b366c049660c4d69980b0f3affb3f30f": {
      "views": [
       {
        "cell_index": 2
@@ -669,14 +922,42 @@
       }
      ]
     },
-    "b8a78839ab0e461e8a15291f3b96dbc8": {
+    "b40fdc9016f644beac9b3745ad7895b1": {
      "views": [
       {
        "cell_index": 12
       }
      ]
     },
+    "b8c07a4a7eb4448d9169c7cb4bf03eb3": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
     "bb9f63f85c854cce8b159aa0c54e0924": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "bc01aaff5f6849829741e1763c87bdf8": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "bd4d29d78da44b1bb9e755c34bcee2d5": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "c1b02253e26548bcb2252bbbc02dc294": {
      "views": [
       {
        "cell_index": 2
@@ -690,6 +971,27 @@
       }
      ]
     },
+    "c72766a22fd0495ebc0786a64c8866f0": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "c822d303b54b435889c12852f91f96c7": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "cabb50487e484771b20e10e1ae0f66d6": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
     "cb2eed2e83c24878b540c2db0fe51fec": {
      "views": [
       {
@@ -697,14 +999,56 @@
       }
      ]
     },
-    "cfe214964fd7476b830f036996fd9c65": {
+    "cbc493b508924c3e93d8f1f7b3badd01": {
      "views": [
       {
        "cell_index": 2
       }
      ]
     },
+    "ce37e757e6b1413188ee9d679b99a356": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
     "d596d18ee8184e4fba5c81c84888750e": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "d871bcda2d244ba3b9938e2a50afc086": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "d89250c01af84b05bdb3e1ac4a768ca1": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "d8a367206b464ef1b1bf1035a29c602c": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "d8c103d566f94b69811e9e7198ad8218": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "d9b1e655e5e5450d9d91c497209799bb": {
      "views": [
       {
        "cell_index": 12
@@ -718,7 +1062,56 @@
       }
      ]
     },
+    "dbbaff18a3be45699e9079daffd59464": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "e217ae57f3f94c708d161f37222781c7": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
     "e22d775cd9354abab1a8ac50f97c2488": {
+     "views": [
+      {
+       "cell_index": 2
+      }
+     ]
+    },
+    "e488a96e44a849ec86e70e95bd398bc8": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "e7ec4b7e471f491fa93723f422a821ed": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "ec233e8e701a4663b6c303f535f04107": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "ed2bbd302ce041d3bd6e1f8525a95117": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "f214dfda5d224228bfb46349fdc712c7": {
      "views": [
       {
        "cell_index": 2
@@ -733,6 +1126,13 @@
      ]
     },
     "fb549e1d84c94b1db8fb2da420446cf4": {
+     "views": [
+      {
+       "cell_index": 12
+      }
+     ]
+    },
+    "fdf528571ab44e42a56706f35b1c3fbd": {
      "views": [
       {
        "cell_index": 12
