Work on the client side of thumbnails download. Added parallel example of CLIClient

--- a/ipython/system/Download Thumbnails.ipynb
+++ b/ipython/system/Download Thumbnails.ipynb
@@ -458,7 +458,7 @@
     "servers_list = sorted(dfs.keys())\n",
     "with open(\"thumbs.log\", \"wb\") as f:\n",
     "    for server in tqdm_notebook(servers_list):\n",
-    "        #tqdm.tqdm.write(\"Processing server: {}\".format(server))\n",
+    "        tqdm.tqdm.write(\"Processing server: {}\".format(server))\n",
     "        df = dfs[server]\n",
     "        df_thumbs = df.loc[idx[:, \"2\"], idx[:]].resample(\"30T\", level=0, label='right').apply(custom_resampler).dropna()\n",
     "\n",
