--- a/ipython/system/Download Thumbnails-remote.ipynb
+++ b/ipython/system/Download Thumbnails-remote.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
-      "  warnings.warn(\"failed to import module %s\" % name)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
@@ -32,6 +23,7 @@
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
+    "import skimage.io as io\n",
     "import time\n",
     "import tqdm\n",
     "from tqdm import tqdm_notebook\n",
@@ -88,7 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "remote_servers = [server_id for server_id in c.servers_list if not server_id.endswith(\"L\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -108,35 +111,34 @@
     "            print(server_id, day, type(e))\n",
     "    \n",
     "    if dfs:\n",
-    "        df = pd.concat(dfs, ignore_index=True)\n",
+    "        df = pd.concat(dfs)\n",
     "    else:\n",
     "        df = None\n",
     "\n",
-    "    return server_id, thumbnails, df"
+    "    return server_id, thumbnails, df, dfs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('115L', '2017_02_20', <type 'exceptions.Exception'>)('114L', '2017_02_21', <type 'exceptions.Exception'>)\n",
+      "('117', '2017_01_25', <type 'exceptions.Exception'>)\n",
+      "('119', '2017_03_20', <type 'exceptions.Exception'>)('115', '2017_04_06', <type 'exceptions.Exception'>)\n",
       "\n",
-      "('119', '2017_03_20', <type 'exceptions.Exception'>)\n",
-      "('111', '2017_04_03', <type 'exceptions.Exception'>)('115', '2017_04_06', <type 'exceptions.Exception'>)\n",
+      "('114', '2017_04_02', <type 'exceptions.Exception'>)('116', '2017_04_06', <type 'exceptions.Exception'>)\n",
       "\n",
-      "('114', '2017_04_02', <type 'exceptions.Exception'>)\n",
+      "('111', '2017_04_03', <type 'exceptions.Exception'>)\n",
       "('113', '2017_04_08', <type 'exceptions.Exception'>)\n",
-      "('116', '2017_04_06', <type 'exceptions.Exception'>)\n",
+      "('117', '2017_04_19', <type 'exceptions.Exception'>)\n",
       "('119', '2017_03_23', <type 'exceptions.Exception'>)\n",
-      "('111L', '2017_02_20', <type 'exceptions.IOError'>)\n",
+      "('117', '2017_04_20', <type 'exceptions.Exception'>)\n",
       "('119', '2017_03_24', <type 'exceptions.Exception'>)\n",
       "('119', '2017_03_25', <type 'exceptions.Exception'>)\n",
       "('119', '2017_03_26', <type 'exceptions.Exception'>)\n",
@@ -146,17 +148,17 @@
       "('119', '2017_03_30', <type 'exceptions.Exception'>)\n",
       "('119', '2017_03_31', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_01', <type 'exceptions.Exception'>)\n",
-      "('109', '2017_03_23', <type 'exceptions.Exception'>)('119', '2017_04_02', <type 'exceptions.Exception'>)\n",
-      "\n",
+      "('109', '2017_03_23', <type 'exceptions.Exception'>)\n",
+      "('119', '2017_04_02', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_03', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_04', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_05', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_06', <type 'exceptions.Exception'>)\n",
-      "('109', '2017_03_24', <type 'exceptions.IOError'>)\n",
       "('119', '2017_04_07', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_08', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_09', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_10', <type 'exceptions.Exception'>)\n",
+      "('109', '2017_03_24', <type 'exceptions.IOError'>)\n",
       "('119', '2017_04_11', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_12', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_13', <type 'exceptions.Exception'>)\n",
@@ -166,19 +168,112 @@
       "('119', '2017_04_17', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_18', <type 'exceptions.Exception'>)\n",
       "('119', '2017_04_19', <type 'exceptions.Exception'>)\n",
-      "('113L', '2017_01_22', <class 'concurrent.futures._base.TimeoutError'>)\n",
-      "('115L', '2017_02_23', <class 'concurrent.futures._base.TimeoutError'>)\n",
-      "('114L', '2017_02_24', <class 'concurrent.futures._base.TimeoutError'>)\n",
-      "('111L', '2017_02_23', <class 'concurrent.futures._base.TimeoutError'>)\n",
-      "('116L', '2017_03_06', <class 'concurrent.futures._base.TimeoutError'>)\n"
+      "('119', '2017_04_20', <type 'exceptions.Exception'>)\n",
+      "('110', '2017_04_10', <class 'concurrent.futures._base.TimeoutError'>)\n",
+      "('110', '2017_04_20', <class 'concurrent.futures._base.TimeoutError'>)\n"
      ]
     }
    ],
    "source": [
     "t0 = time.time()\n",
-    "reply = Parallel(backend=\"threading\", n_jobs=len(c.servers_list))(\n",
-    "    delayed(get_thumbs)(c, server_id) for server_id in c.servers_list)\n",
+    "replies = Parallel(backend=\"threading\", n_jobs=len(remote_servers))(\n",
+    "    delayed(get_thumbs)(c, server_id) for server_id in remote_servers)\n",
     "t1 = time.time() - t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "512.4509999752045"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"thumbs_remote.pkl\", \"wb\") as f:\n",
+    "    cPickle.dump(replies, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "new_dfs = {}\n",
+    "for server, thumbnails, df, _ in replies:\n",
+    "    if df is None:\n",
+    "        continue\n",
+    "            \n",
+    "    paths = []\n",
+    "    for i, (ind, row) in enumerate(df.iterrows()):\n",
+    "        thumbs_path = os.path.join(\"thumbnails\", server, os.path.split(row[\"path\"])[-1])\n",
+    "        thumbs_path = thumbs_path[:-3] + \".jpg\"\n",
+    "        paths.append(thumbs_path)\n",
+    "        folder, _ = os.path.split(thumbs_path)\n",
+    "        if not os.path.exists(folder):\n",
+    "            os.makedirs(folder)\n",
+    "        io.imsave(thumbs_path, thumbnails[i])\n",
+    "    df[\"thumbnail\"] = paths\n",
+    "    new_dfs[server] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"thumbnails_downloaded_remote.pkl\", \"wb\") as f:\n",
+    "    cPickle.dump(new_dfs, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'109'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-54-e020b54b85d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mservers_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"109\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: '109'"
+     ]
+    }
+   ],
+   "source": [
+    "servers_df[\"109\"]"
    ]
   },
   {
